添加自定义插件

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -43,6 +43,10 @@
       	<button class="button button-positive" ng-click="Toast()">Toast</button>
       	<span>小弹框</span>
       </ion-item>
+      <ion-item>
+      	<button class="button button-positive" ng-click="MyPlugin()">MyPlugin</button>
+      	<span>我的自定义插件</span>
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
